--- a/packages/imtoken-wallet/package.json
+++ b/packages/imtoken-wallet/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.7.2",
+    "bip39": "^3.1.0",
+    "hdkey": "^2.1.0",
     "plasmo": "0.82.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -22,6 +24,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.14",
     "postcss": "8.4.26",
     "prettier": "3.0.0",
     "tailwindcss": "3.3.3",
@@ -29,10 +32,24 @@
   },
   "manifest": {
     "host_permissions": [
+      "*://*/*",
+      "<all_urls>",
+      "http://*/*",
       "https://*/*"
     ],
     "permissions": [
-      "tabs"
+      "tabs",
+      "alarms",
+      "storage",
+      "activeTab",
+      "scripting",
+      "webRequest",
+      "geolocation",
+      "contextMenus",
+      "notifications",
+      "webNavigation",
+      "unlimitedStorage",
+      "declarativeNetRequest"
     ]
   }
 }
