Add i18n, tailwindcss, wouter

--- a/packages/imtoken-wallet/tsconfig.json
+++ b/packages/imtoken-wallet/tsconfig.json
@@ -5,7 +5,8 @@
     ".plasmo/index.d.ts",
     "./**/*.ts",
     "./**/*.tsx",
-    "src/background/messages/generateMnemonic.ts"
+    "src/background/messages/generateMnemonic.ts",
+    "src/utils/wagmi.tsx"
   ],
   "compilerOptions": {
     "paths": {
