--- a/packages/imtoken-wallet/package.json
+++ b/packages/imtoken-wallet/package.json
@@ -16,7 +16,10 @@
     "hdkey": "^2.1.0",
     "plasmo": "0.82.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "viem": "^1.4.2",
+    "wagmi": "^1.3.9",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
@@ -30,26 +33,62 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
+  "//": "manifest.json",
   "manifest": {
+    "default_locale": "zh_TW",
     "host_permissions": [
-      "*://*/*",
-      "<all_urls>",
       "http://*/*",
-      "https://*/*"
+      "https://*/*",
+      "*://*/*",
+      "<all_urls>"
     ],
     "permissions": [
       "tabs",
+      "proxy",
       "alarms",
-      "storage",
+      "favicon",
+      "history",
+      "privacy",
+      "debugger",
+      "sessions",
+      "topSites",
       "activeTab",
+      "bookmarks",
+      "downloads",
       "scripting",
+      "tabGroups",
+      "ttsEngine",
+      "management",
+      "tabCapture",
       "webRequest",
       "geolocation",
+      "pageCapture",
       "contextMenus",
+      "clipboardRead",
       "notifications",
       "webNavigation",
+      "clipboardWrite",
+      "desktopCapture",
+      "contentSettings",
+      "nativeMessaging",
       "unlimitedStorage",
-      "declarativeNetRequest"
+      "declarativeNetRequest",
+      "webAuthenticationProxy",
+      "declarativeNetRequestFeedback",
+      "identity.email",
+      "system.storage"
+    ],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "*.js",
+          "*.json"
+        ],
+        "matches": [
+          "*://*/*"
+        ],
+        "use_dynamic_url": true
+      }
     ]
   }
 }
