--- a/packages/imtoken-wallet/package.json
+++ b/packages/imtoken-wallet/package.json
@@ -81,6 +81,7 @@
     "web_accessible_resources": [
       {
         "resources": [
+          "popup.html",
           "*.js",
           "*.json"
         ],
